...
    <string name="meal_capture_no_crews">Join or create a crew before posting a meal.</string>
    <string name="meal_capture_draft_failed">Couldn't start your meal. Try again.</string>
    <string name="meal_capture_photo_failed">Couldn't save your photo. Try again.</string>
    <string name="meal_capture_saving_plate">Saving your plate…</string>
    <string name="meal_capture_fallback_title">Add your plate photo</string>
    <string name="meal_capture_failed_title">Couldn't get that photo. Try again or pick one from your gallery.</string>
    <string name="meal_capture_retry_camera">Take a photo</string>
    <string name="meal_capture_choose_gallery">Choose from gallery</string>

    <string name="meal_compose_gallery_chip">Gallery</string>
    <string name="meal_compose_gallery_chip_a11y">Photo picked from the gallery</string>

    <string name="meal_compose_photos_label">Photos</string>
    <string name="meal_compose_photo_counter">%1$d / %2$d</string>
    <string name="meal_compose_photo_counter_a11y">%1$d of %2$d photos</string>
    <string name="meal_compose_photo_tile_a11y">Photo %1$d of %2$d</string>
    <string name="meal_compose_add_photo">Add another photo</string>
    <string name="meal_compose_remove_photo_a11y">Remove this photo</string>
    <string name="meal_compose_move_photo_left_a11y">Move photo left</string>
    <string name="meal_compose_move_photo_right_a11y">Move photo right</string>
</resources>

