...
import foodrats.core.i18n.generated.resources.common_retry
import org.jetbrains.compose.resources.StringResource

enum class CommonStringKey(override val resourceId: StringResource) : StringKey {
    AppName(Res.string.app_name),
    Retry(Res.string.common_retry),
    Cancel(Res.string.common_cancel),
    Continue(Res.string.common_continue),
    Back(Res.string.common_back),
    OpenSettings(Res.string.common_open_settings),
}

